# pandas_edu

./: LICENSE  README.md  pyproject.toml
pandas_edu/: __init__.py  pandas_edu.py  pdedu_libs.py
