[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pandas_edu"
authors = [{name = "Bobo Jamson", email = "bobo.jamson@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    ]
keywords = ["pandas", "pandas-extension", "datascience", "eda", "exploratory-data-analysis"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/bobo-jamson/pandas_edu"
